<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_atop"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <ImageView-->
        <!--            android:id="@+id/MapVeiw"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:layout_marginEnd="7dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:contentDescription="@string/app_name"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            tools:ignore="VisualLintBounds"-->
        <!--            tools:srcCompat="@drawable/map1" />-->

        <com.caverock.androidsvg.SVGImageView
            android:id="@+id/MapView"
            android:layout_width="392dp"
            android:layout_height="545dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/ZoomOutButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="302dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/buttons_background_color"
            android:contentDescription="@string/zoom_out_desc"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.128"
            app:srcCompat="@drawable/zoom_out_btn_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/ZoomInButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/buttons_background_color"
            android:contentDescription="@string/zoom_in_desc"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.376"
            app:srcCompat="@drawable/zoom_in_btn_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/SelectMapButton"
            android:layout_width="143dp"
            android:layout_height="149dp"
            android:backgroundTint="#00FFFFFF"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/select_map_btn_desc"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/selectmapshandinverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.986"
            tools:ignore="VisualLintBounds" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>