<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SelectMap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SelectMap" >

    <TextView
        android:id="@+id/SelectMapHeader"
        style="@android:style/Widget.Material.Light.TextView"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/select_parking"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parking_map_one" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parking_map_two" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parking_map_three" />

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text" />
    </RadioGroup>

</LinearLayout>